--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -23,9 +23,9 @@
             </a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="./tables.html">
+            <a class="nav-link" routerLink="/orders">
               <i class="material-icons">content_paste</i>
-              <p>Table List</p>
+              <p>Orders</p>
             </a>
           </li>
           <li class="nav-item ">
