--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -29,9 +29,9 @@
             </a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="./typography.html">
+            <a class="nav-link" routerLink="/bills">
               <i class="material-icons">library_books</i>
-              <p>Typography</p>
+              <p>Bills</p>
             </a>
           </li>
           <li class="nav-item ">
