--- a/src/app/page/dashboard/dashboard.component.html
+++ b/src/app/page/dashboard/dashboard.component.html
@@ -1,5 +1,13 @@
 <div class="row">
   <div class="col-lg-3 col-md-6 col-sm-6">
+
+    <app-info-card
+      [cardClass]="'card-header-warning'"
+      [icon]="'content_copy'"
+      [content]="'49/50 GB'"
+      [footer]="'Get More Space...'"
+    ></app-info-card>
+
     <div class="card card-stats">
       <div class="card-header card-header-warning card-header-icon">
         <div class="card-icon">
