Cards add Product-list filter order

--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -22,10 +22,16 @@
               <p>User Profile</p>
             </a>
           </li>
-          <li class="nav-item ">
+          <!--<li class="nav-item ">
             <a class="nav-link" routerLink="/orders">
               <i class="material-icons">content_paste</i>
               <p>Orders</p>
+            </a>
+          </li>-->
+          <li class="nav-item ">
+            <a class="nav-link" routerLink="/product">
+              <i class="material-icons">content_paste</i>
+              <p>Product-list</p>
             </a>
           </li>
           <li class="nav-item ">
