--- a/src/app/page/dashboard/dashboard.component.html
+++ b/src/app/page/dashboard/dashboard.component.html
@@ -4,27 +4,11 @@
     <app-info-card
       [cardClass]="'card-header-warning'"
       [icon]="'content_copy'"
-      [content]="'49/50 GB'"
+      [content]="'Ez már Angular Card'"
       [footer]="'Get More Space...'"
     ></app-info-card>
 
-    <div class="card card-stats">
-      <div class="card-header card-header-warning card-header-icon">
-        <div class="card-icon">
-          <i class="material-icons">content_copy</i>
-        </div>
-        <p class="card-category">Used Space</p>
-        <h3 class="card-title">49/50
-          <small>GB</small>
-        </h3>
-      </div>
-      <div class="card-footer">
-        <div class="stats">
-          <i class="material-icons text-danger">warning</i>
-          <a href="javascript:;">Get More Space...</a>
-        </div>
-      </div>
-    </div>
+
   </div>
   <div class="col-lg-3 col-md-6 col-sm-6">
     <div class="card card-stats">
