--- a/src/app/page/product-list/product-list.component.html
+++ b/src/app/page/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-12">
   <div class="card card-plain">
-      <button class="btn btn-danger btn-block">
+      <button  [routerLink]="[0]" class="btn btn-danger btn-block">
           <span class="mat-button-wrapper">Add new product</span>
           <!-- <div class="mat-button-ripple mat-ripple" matripple=""></div> -->
           <!-- <div class="mat-button-focus-overlay"></div> -->
@@ -17,17 +17,56 @@
               <table class="table table-hover">
                   <thead class="">
                       <tr>
-                          <th>ID:</th>
-                          <th>Name:</th>
-                          <th>Type:</th>
-                          <th>Description:</th>
-                          <th>Price:</th>
-                          <th>Featured:</th>
-                          <th>Active:</th>
+                          <th [class.active]="order === 'id'"
+                            (click)="setOrder('id')">ID:
+                            <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span>
+                          </th>
+
+                          <th [class.active]="order === 'name'"
+                          (click)="setOrder('name')">Name:
+                          <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span>
+                          </th>
+
+                          <th [class.active]="order === 'type'"
+                          (click)="setOrder('type')">Type:
+                          <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span>
+                          </th>
+
+                          <th [class.active]="order === 'description'"
+                          (click)="setOrder('description')">Description:
+                          <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span>
+                          </th>
+
+                          <th [class.active]="order === 'price'"
+                          (click)="setOrder('price')">Price:
+                          <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span>
+                          </th>
+
+                          <th [class.active]="order === 'featured'"
+                          (click)="setOrder('featured')">Featured:
+                          <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span>
+                          </th>
+
+                          <th [class.active]="order === 'active'"
+                          (click)="setOrder('active')">Active:
+                          <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span>
+                          </th>
+
                       </tr>
+
+                      <tr>
+                        <th><input (keyup)="onFilter('id', $event)" class="form-control" type="text" placeholder="Filter"></th>
+                        <th><input (keyup)="onFilter('name', $event)" class="form-control" type="text" placeholder="Filter"></th>
+                        <th><input (keyup)="onFilter('type', $event)" class="form-control" type="text" placeholder="Filter"></th>
+                        <th><input (keyup)="onFilter('description', $event)" class="form-control" type="text" placeholder="Filter"></th>
+                        <th><input (keyup)="onFilter('price', $event)" class="form-control" type="text" placeholder="Filter"></th>
+                        <th><input (keyup)="onFilter('featured', $event)" class="form-control" type="text" placeholder="Filter"></th>
+                        <th><input (keyup)="onFilter('active', $event)" class="form-control" type="text" placeholder="Filter"></th>
+                      </tr>
+
                   </thead>
                   <tbody>
-                      <tr *ngFor="let product of productList$ | async ">
+                      <tr *ngFor="let product of productList$ | async | orderBy:order:reverse">
                           <td>{{ product.id }}</td>
                           <td>{{ product.name }}</td>
                           <td>{{ product.type }}</td>
@@ -43,7 +82,7 @@
                                           create
                                       </span>
                                   </button>
-                                  <button class="btn btn-danger">
+                                  <button (click)="onDelete(product)" class="btn btn-danger">
                                       <span class="material-icons">
                                           delete_forever
                                       </span>
