--- a/src/app/page/product-list/product-list.component.scss
+++ b/src/app/page/product-list/product-list.component.scss
@@ -1,10 +1,14 @@
 thead th {
   cursor: pointer;
+  background-color: #EEEEEE;
   margin-right: 15px;
   margin-left: 15px;
-
   span {
     visibility: hidden;
+  }
+
+  &:hover {
+    background-color:#F5F5F5;
   }
 
   &.active {
@@ -14,4 +18,7 @@ thead th {
       visibility: visible;
     }
   }
+
 }
+
+
