--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -29,6 +29,12 @@
             </a>
           </li>
           <li class="nav-item ">
+            <a class="nav-link" routerLink="/product">
+              <i class="material-icons">content_paste</i>
+              <p>Product-list</p>
+            </a>
+          </li>
+          <li class="nav-item ">
             <a class="nav-link" routerLink="/bills">
               <i class="material-icons">library_books</i>
               <p>Bills</p>
