--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -35,7 +35,7 @@
             </a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" routerLink="/bills">
+            <a class="nav-link" routerLink="/bill">
               <i class="material-icons">library_books</i>
               <p>Bills</p>
             </a>
