--- a/src/app/page/edit-product/edit-product.component.html
+++ b/src/app/page/edit-product/edit-product.component.html
@@ -1,47 +1,47 @@
 <div class="container">
-<form>
-  <div class="form-group">
-    <label for="name">Name</label>
-    <input type="text" class="form-control" id="name" name="name" aria-describedby="name">
-  </div>
-  <div class="form-group">
-    <label for="name">Type</label>
-    <input type="text" class="form-control" id="type" name="type" aria-describedby="type">
-  </div>
-  <div class="form-group">
-    <label for="catid">CatId</label>
-    <input type="text" class="form-control" id="catid" name="catid" aria-describedby="type">
+  <form>
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input [(ngModel)]="product.name" type="text" class="form-control" id="name" name="name" aria-describedby="name" required>
+    </div>
+    <div class="form-group">
+      <label for="name">Type</label>
+      <input [(ngModel)]="product.type" type="text" class="form-control" id="type" name="type" aria-describedby="type" required>
+    </div>
+    <div class="form-group">
+      <label for="catid">CatId</label>
+      <input [(ngModel)]="product.catID" type="text" class="form-control" id="catid" name="catid" aria-describedby="type" required>
+    </div>
+
+    <label for="description">Description</label>
+      <textarea  [(ngModel)]="product.description" name="description" class="form-control" id="description" rows="3" required></textarea>
+    <div class="form-group">
+      <label for="price">Price</label>
+      <input [(ngModel)]="product.price" type="text" class="form-control" id="price" name="price" aria-describedby="price" required>
+    </div>
+
+    <div class="form-check mt-4">
+      <label class="form-check-label">
+        <input class="form-check-input" type="checkbox" value="">
+        <span class="form-check-sign">
+          <span class="check"></span>
+        </span>
+        Featured
+      </label>
+    </div>
+
+    <div class="form-check mt-4">
+      <label class="form-check-label">
+        <input class="form-check-input" type="checkbox" value="">
+        <span class="form-check-sign">
+          <span class="check"></span>
+        </span>
+        Active
+      </label>
   </div>
 
-  <label for="description">Description</label>
-    <textarea class="form-control" id="description" rows="3"></textarea>
-  <div class="form-group">
-    <label for="price">Price</label>
-    <input type="text" class="form-control" id="price" name="price" aria-describedby="price">
-  </div>
 
-  <div class="form-check mt-4">
-    <label class="form-check-label">
-      <input class="form-check-input" type="checkbox" value="">
-      <span class="form-check-sign">
-        <span class="check"></span>
-      </span>
-      Featured
-    </label>
-  </div>
-
-  <div class="form-check mt-4">
-    <label class="form-check-label">
-      <input class="form-check-input" type="checkbox" value="">
-      <span class="form-check-sign">
-        <span class="check"></span>
-      </span>
-      Active
-    </label>
-  </div>
-
-
-  <button type="submit" class="btn btn-primary float-right">Submit</button>
+  <button disabled type="submit" class="btn btn-primary float-right">Submit</button>
 </form>
 
 </div>
