--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -30,8 +30,8 @@
           </li>
           <li class="nav-item ">
             <a class="nav-link" routerLink="/product">
-              <i class="material-icons">content_paste</i>
-              <p>Product-list</p>
+              <i class="material-icons">shopping_cart</i>
+              <p>Products</p>
             </a>
           </li>
           <li class="nav-item ">
