Edit Button Deactivated

--- a/src/app/page/order-list/order-list.component.html
+++ b/src/app/page/order-list/order-list.component.html
@@ -64,10 +64,10 @@
                             <td>{{ order.status }}</td>
                             <td>
                                 <div class="btn-group">
-                                    <button [routerLink]="[order.id]" class="btn btn-warning">
+                                    <!-- <button [routerLink]="[order.id]" class="btn btn-warning">
                                         <span class="material-icons">
                                             create
-                                        </span>
+                                        </span> -->
                                     </button>
                                     <button (click)="onDelete(order)" class="btn btn-danger">
                                         <span class="material-icons">
