--- a/src/app/page/order-list/order-list.component.html
+++ b/src/app/page/order-list/order-list.component.html
@@ -68,7 +68,7 @@
                                         <span class="material-icons">
                                             create
                                         </span> -->
-                                    </button>
+                                    <!-- </button> -->
                                     <button (click)="onDelete(order)" class="btn btn-danger">
                                         <span class="material-icons">
                                             delete_forever
