--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -40,6 +40,12 @@
               <p>Bills</p>
             </a>
           </li>
+          <li class="nav-item ">
+            <a class="nav-link" routerLink="/customers">
+              <i class="material-icons">person</i>
+              <p>Customers</p>
+            </a>
+          </li>
           <!--
             <li class="nav-item ">
               <a class="nav-link" href="./icons.html">
