Feat: customer-list jav

--- a/src/app/page/customer-list/customer-list.component.html
+++ b/src/app/page/customer-list/customer-list.component.html
@@ -1,21 +1,15 @@
-<div class="container">
-  <div class="row">
-      <h3>Customers</h3>
-      <div class="input-group no-border mt-2">
-          <input class="form-control searchInput py-1 my-1" #search type="text" value="" class="form-control"
-              placeholder="Search..." (keyup)="0">
-          <button type="submit" class="btn btn-white btn-round btn-just-icon">
-              <i class="material-icons">search</i>
-              <div class="ripple-container"></div>
-          </button>
-      </div>
+<div class="col-md-12">
+  <div class="card card-plain">
+    <button class="btn btn-danger btn-block">
+      <span class="mat-button-wrapper">Add new order</span>
+    </button>
+    <div class="card-header card-header-primary">
+      <h4 class="card-title mt-0">Customer List</h4>
+      <p class="card-category">All customers should be seen here</p>
+    </div>
+
       <div class="col-12 my-2">
-          <button class="btn btn-success w-100 py-6 my-3">
-              <i class="material-icons">
-                  person_add
-              </i>
-          </button>
-          <table class="table table-striped">
+          <table class="table table-hover">
               <thead>
                   <tr>
                       <th>FirstName</th>
@@ -48,7 +42,6 @@
                                   </i>
                               </button>
                               <button (click)="removeCustomer(customer.id)" class="btn btn-danger px-3 ml-1">
-                                  <!-- [routerLink]="['']" -->
                                   <i class="material-icons">
                                       delete_forever
                                   </i>
@@ -59,5 +52,6 @@
               </tbody>
           </table>
       </div>
+
   </div>
 </div>
