--- a/src/app/page/edit-product/edit-product.component.html
+++ b/src/app/page/edit-product/edit-product.component.html
@@ -41,7 +41,7 @@
   </div>
 
 
-  <button disabled type="submit" class="btn btn-primary float-right">Submit</button>
+  <button (click)="onSave()" type="submit" class="btn btn-primary float-right">Submit</button>
 </form>
 
 </div>
