--- a/src/app/page/edit-product/edit-product.component.html
+++ b/src/app/page/edit-product/edit-product.component.html
@@ -1,28 +1,42 @@
 <div class="container">
-  <form>
+  <form #productForm="ngForm">
     <div class="form-group">
       <label for="name">Name</label>
-      <input [(ngModel)]="product.name" type="text" class="form-control" id="name" name="name" aria-describedby="name" required>
-    </div>
-    <div class="form-group">
-      <label for="name">Type</label>
-      <input [(ngModel)]="product.type" type="text" class="form-control" id="type" name="type" aria-describedby="type" required>
-    </div>
-    <div class="form-group">
-      <label for="catid">CatId</label>
-      <input [(ngModel)]="product.catID" type="text" class="form-control" id="catid" name="catid" aria-describedby="type" required>
+      <input [(ngModel)]="product.name" type="text" class="form-control" id="name"
+       name="name" aria-describedby="name" required #productName="ngModel">
+       <div [hidden]="productName.valid || productName.pristine">
+         Please choose a name.
+       </div>
     </div>
 
-    <label for="description">Description</label>
-      <textarea  [(ngModel)]="product.description" name="description" class="form-control" id="description" rows="3" required></textarea>
     <div class="form-group">
+      <label for="catid">Type</label>
+      <select [(ngModel)]="product.catID" (change)="onTypeSelect($event)" type="text" class="form-control" id="catid" name="catID" aria-describedby="catid" required>
+      <option *ngFor="let category of categories" [value]="category.id">{{ category.category }}</option>
+      </select>
+    </div>
+
+      <label for="description">Description</label>
+      <textarea  [(ngModel)]="product.description" name="description"
+       class="form-control" id="description" rows="3" required #productDescription="ngModel"></textarea>
+
+       <div [hidden]="productDescription.valid || productDescription.pristine">
+        Please choose description
+       </div>
+
+    <div class="form-group">
+
       <label for="price">Price</label>
-      <input [(ngModel)]="product.price" type="text" class="form-control" id="price" name="price" aria-describedby="price" required>
+      <input [(ngModel)]="product.price" type="number" class="form-control" id="price"
+       name="price" aria-describedby="price" required #productPrice="ngModel" min="1">
+       <div [hidden]="productPrice.valid || productPrice.pristine">
+        Please choose price
+       </div>
     </div>
 
     <div class="form-check mt-4">
       <label class="form-check-label">
-        <input class="form-check-input" type="checkbox" value="">
+        <input name="featured" [(ngModel)]="product.featured" class="form-check-input" type="checkbox" value="">
         <span class="form-check-sign">
           <span class="check"></span>
         </span>
@@ -32,7 +46,7 @@
 
     <div class="form-check mt-4">
       <label class="form-check-label">
-        <input class="form-check-input" type="checkbox" value="">
+        <input name="active" [(ngModel)]="product.active" class="form-check-input" type="checkbox" value="">
         <span class="form-check-sign">
           <span class="check"></span>
         </span>
@@ -40,8 +54,8 @@
       </label>
   </div>
 
+  <button [disabled]="!productForm.form.valid" (click)="onSave()" type="submit" class="btn btn-primary float-right">Submit</button>
 
-  <button (click)="onSave()" type="submit" class="btn btn-primary float-right">Submit</button>
 </form>
 
 </div>
