--- a/src/app/page/edit-bill/edit-bill.component.html
+++ b/src/app/page/edit-bill/edit-bill.component.html
@@ -1,1 +1,33 @@
-<p>edit-bill works!</p>
+<div class="container">
+  <form >
+    <div class="form-group">
+      <label for="name">orderID</label>
+      <input type="text" class="form-control" id="name"
+       name="name" aria-describedby="name" required >
+
+    </div>
+
+    <div class="form-group">
+      <label for="catid">Amount</label>
+      <select type="text" class="form-control" id="catid" name="catID" aria-describedby="catid" required>
+      <option *ngFor="let category of categories" [value]="category.id">{{ category.category }}</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="catid">Status</label>
+      <select type="text" class="form-control" id="catid" name="catID" aria-describedby="catid" required>
+      <option *ngFor="let category of categories" [value]="category.id">{{ category.category }}</option>
+      </select>
+    </div>
+
+
+
+
+  <button type="submit" class="btn btn-primary float-right">Submit</button>
+
+</form>
+
+</div>
+
+
