EditOrder Formatted , Add New Order fixed

--- a/src/app/page/order-list/order-list.component.html
+++ b/src/app/page/order-list/order-list.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-12">
     <div class="card card-plain">
-        <button [routerLink]="[order.id]" class="btn btn-danger btn-block">
+        <button [routerLink]="['0']" class="btn btn-danger btn-block">
             <span class="mat-button-wrapper">Add new order</span>
             <!-- <div class="mat-button-ripple mat-ripple" matripple=""></div> -->
             <!-- <div class="mat-button-focus-overlay"></div> -->
