--- a/src/app/page/edit-bill/edit-bill.component.html
+++ b/src/app/page/edit-bill/edit-bill.component.html
@@ -8,17 +8,16 @@
     </div>
 
     <div class="form-group">
-      <label for="catid">Amount</label>
-      <select type="text" class="form-control" id="catid" name="catID" aria-describedby="catid" required>
-      <option *ngFor="let category of categories" [value]="category.id">{{ category.category }}</option>
-      </select>
+      <label for="name">Amount</label>
+      <input type="text" class="form-control" id="name"
+       name="name" aria-describedby="name" required >
+
     </div>
 
     <div class="form-group">
       <label for="catid">Status</label>
-      <select type="text" class="form-control" id="catid" name="catID" aria-describedby="catid" required>
-      <option *ngFor="let category of categories" [value]="category.id">{{ category.category }}</option>
-      </select>
+      <input type="text" class="form-control" id="name"
+       name="name" aria-describedby="name" required >
     </div>
 
 
