--- a/src/app/page/product-list/product-list.component.html
+++ b/src/app/page/product-list/product-list.component.html
@@ -1,11 +1,11 @@
 <div class="col-md-12">
   <div class="card card-plain">
-      <button  [routerLink]="[0]" class="btn btn-danger btn-block">
+      <button  [routerLink]="[0]" class="btn btn-warning btn-block">
           <span class="mat-button-wrapper">Add new product</span>
       </button>
   </div>
   <div class="card card-plain">
-      <div class="card-header card-header-primary">
+      <div class="card-header card-header-info">
           <h4 class="card-title mt-0">Product List</h4>
           <p class="card-category">All products should be seen here</p>
       </div>
