--- a/src/app/page/product-list/product-list.component.html
+++ b/src/app/page/product-list/product-list.component.html
@@ -1,5 +1,8 @@
 <div class="col-md-12">
   <div class="card card-plain">
+      <div class="header-text">
+        <h2>Product list</h2>
+      </div>
       <button  [routerLink]="[0]" class="btn btn-danger btn-block">
           <span class="mat-button-wrapper">Add new product</span>
       </button>
