--- a/src/app/page/edit-bill/edit-bill.component.html
+++ b/src/app/page/edit-bill/edit-bill.component.html
@@ -1,15 +1,22 @@
 <div class="container">
-  <form >
+  <div class="col-md-8">
+    <div class="card">
+      <div class="card-header card-header-primary mb-3">
+        <h4 class="card-title">Edit Bill</h4>
+        <p class="card-category">Bill Acount!</p>
+      </div>
+  <form action="">
+    <div class="col-md-10 offset-1">
     <div class="form-group">
-      <label for="name">orderID</label>
-      <input type="text" class="form-control" id="name"
-       name="name" aria-describedby="name" required >
+      <label for="id">orderID</label>
+      <input type="number" class="form-control" id="id"
+       name="id" required >
 
     </div>
 
     <div class="form-group">
       <label for="name">Amount</label>
-      <input type="text" class="form-control" id="name"
+      <input type="number" class="form-control" id="name"
        name="name" aria-describedby="name" required >
 
     </div>
@@ -23,10 +30,14 @@
 
 
 
-  <button type="submit" class="btn btn-primary float-right">Submit</button>
-
+  <button (click)="onsubmit(bill)" type="submit" class="btn btn-primary float-right" mat-raised-button=""><span class="mat-button-wrapper">Submit</span>
+  <div class="mat-button-ripple-mat-riple" matripple=""></div>
+  <div class="mat-button-focus-overlay"></div>
+</button>
+    </div>
 </form>
 
 </div>
 
-
+  </div>
+  </div>
