--- a/src/app/page/edit-bill/edit-bill.component.html
+++ b/src/app/page/edit-bill/edit-bill.component.html
@@ -8,9 +8,9 @@
   <form action="">
     <div class="col-md-10 offset-1">
     <div class="form-group">
-      <label for="id">orderID</label>
-      <input type="number" class="form-control" id="id"
-       name="id" required >
+      <label for="orderID">OrderID</label>
+      <input [(ngModel)]='bill.orderID' type="text" class="form-control" id="orderID"
+       name="orderID" required >
 
     </div>
 
