--- a/src/app/page/edit-product/edit-product.component.html
+++ b/src/app/page/edit-product/edit-product.component.html
@@ -3,7 +3,7 @@
   <div class="col-md-8">
       <div class="card">
           <div class="card-header card-header-danger mb-3">
-              <h4 class="card-title">Edit Order</h4>
+              <h4 class="card-title">Edit Product</h4>
               <p class="card-category">Change anything you'd like!</p>
           </div>
 
