--- a/src/app/page/dashboard/dashboard.component.html
+++ b/src/app/page/dashboard/dashboard.component.html
@@ -2,8 +2,8 @@
   <div class="col-lg-3 col-md-6 col-sm-6">
 
     <app-info-card
-      [cardClass]="'card-header-warning'"
-      [icon]="'content_copy'"
+      [cardClass]="'card-header-success'"
+      [icon]="'shopping_cart'"
       [title]="'Number of active products'"
       [content]="'Active: ' + infoData.activeProductCount"
       [footer]="'Get More Space...'"
@@ -16,7 +16,7 @@
 
     <app-info-card
       [cardClass]="'card-header-danger'"
-      [icon]="'store'"
+      [icon]="'unpublished'"
       [title]="'Number of unpaid bills'"
       [content]="'Unpaid: ' + infoData.unpaidBills"
       [footer]="'Get More Space...'"
@@ -29,7 +29,7 @@
 
     <app-info-card
       [cardClass]="'card-header-danger'"
-      [icon]="'store'"
+      [icon]="'paid'"
       [title]="'Amount of unpaid bills'"
       [content]="'Unpaid: $' + infoData.unpaidAmount"
       [footer]="'Get More Space...'"
