--- a/src/app/page/edit-bill/edit-bill.component.html
+++ b/src/app/page/edit-bill/edit-bill.component.html
@@ -9,22 +9,22 @@
     <div class="col-md-10 offset-1">
     <div class="form-group">
       <label for="orderID">OrderID</label>
-      <input [(ngModel)]='bill.orderID' type="text" class="form-control" id="orderID"
+      <input [(ngModel)]='bill.orderID' type="number" class="form-control" id="orderID"
        name="orderID" required >
 
     </div>
 
     <div class="form-group">
-      <label for="name">Amount</label>
-      <input type="number" class="form-control" id="name"
-       name="name" aria-describedby="name" required >
+      <label for="amount">Amount</label>
+      <input type="number" class="form-control" id="amount"
+       name="amount" aria-describedby="amount" required >
 
     </div>
 
     <div class="form-group">
-      <label for="catid">Status</label>
-      <input type="text" class="form-control" id="name"
-       name="name" aria-describedby="name" required >
+      <label for="status">Status</label>
+      <input type="text" class="form-control" id="status"
+       name="status" aria-describedby="status" required >
     </div>
 
 
