--- a/src/app/page/edit-bill/edit-bill.component.html
+++ b/src/app/page/edit-bill/edit-bill.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="col-md-8">
+  <div class="col-md-6">
     <div class="card">
       <div class="card-header card-header-primary mb-3">
         <h4 class="card-title">Edit Bill</h4>
@@ -16,14 +16,14 @@
 
     <div class="form-group">
       <label for="amount">Amount</label>
-      <input type="number" class="form-control" id="amount"
+      <input [(ngModel)]='bill.amount' type="number" class="form-control" id="amount"
        name="amount" aria-describedby="amount" required >
 
     </div>
 
     <div class="form-group">
       <label for="status">Status</label>
-      <input type="text" class="form-control" id="status"
+      <input [(ngModel)]='bill.status' type="text" class="form-control" id="status"
        name="status" aria-describedby="status" required >
     </div>
 
