--- a/src/app/common/table-card/table-card.component.html
+++ b/src/app/common/table-card/table-card.component.html
@@ -1,1 +1,15 @@
 <p>table-card works!</p>
+<div class="card card-chart">
+  <div class="card-header card-header-warning">
+    <div class="ct-chart" id="websiteViewsChart">{{title}}</div>
+  </div>
+  <div class="card-body">
+    <h4 class="card-title">{{type}}</h4>
+    <p class="card-category">{{data}}</p>
+  </div>
+  <div class="card-footer">
+    <div class="stats">
+      <i class="material-icons">access_time</i> campaign sent 2 days ago
+    </div>
+  </div>
+</div>
