--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="loaderService.isLoading | async" class="loader-container">
+  <mat-spinner color="accent" style="top:50%; left: 40%;"></mat-spinner>
+</div>
 
   <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
     <div class="container-fluid">
