--- a/src/app/page/dashboard/dashboard.component.html
+++ b/src/app/page/dashboard/dashboard.component.html
@@ -38,7 +38,6 @@
 
   </div>
 
-
   <div class="col-lg-3 col-md-6 col-sm-6">
     <div class="card card-stats">
       <div class="card-header card-header-info card-header-icon">
@@ -56,39 +55,22 @@
     </div>
   </div>
 </div>
+
 <div class="row">
   <div class="col-md-4">
-    <div class="card card-chart">
-      <div class="card-header card-header-success">
-        <div class="ct-chart" id="dailySalesChart"></div>
-      </div>
-      <div class="card-body">
-        <h4 class="card-title">Daily Sales</h4>
-        <p class="card-category">
-          <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> increase in today sales.</p>
-      </div>
-      <div class="card-footer">
-        <div class="stats">
-          <i class="material-icons">access_time</i> updated 4 minutes ago
-        </div>
-      </div>
-    </div>
-  </div>
+
+  <app-status-card>
+
+  </app-status-card>
+
+</div>
+
   <div class="col-md-4">
-    <div class="card card-chart">
-      <div class="card-header card-header-warning">
-        <div class="ct-chart" id="websiteViewsChart"></div>
-      </div>
-      <div class="card-body">
-        <h4 class="card-title">Email Subscriptions</h4>
-        <p class="card-category">Last Campaign Performance</p>
-      </div>
-      <div class="card-footer">
-        <div class="stats">
-          <i class="material-icons">access_time</i> campaign sent 2 days ago
-        </div>
-      </div>
-    </div>
+
+    <app-table-card>
+
+    </app-table-card>
+
   </div>
   <div class="col-md-4">
     <div class="card card-chart">
