--- a/src/app/page/product-list/product-list.component.html
+++ b/src/app/page/product-list/product-list.component.html
@@ -12,7 +12,7 @@
 
       <div class="card-body">
           <div class="table-responsive">
-              <table class="table table-hover">
+              <table class="table table-hover table-responsive">
                   <thead class="">
                       <tr class="bcolor">
                           <th [class.active]="order === 'id'"
@@ -94,5 +94,7 @@
       </div>
   </div>
 </div>
+
+
 
 
