--- a/src/app/page/edit-bill/edit-bill.component.html
+++ b/src/app/page/edit-bill/edit-bill.component.html
@@ -5,32 +5,34 @@
         <h4 class="card-title">Edit Bill</h4>
         <p class="card-category">Bill Acount!</p>
       </div>
-  <form action="">
+  <form #billForm="ngForm">
     <div class="col-md-10 offset-1">
     <div class="form-group">
       <label for="orderID">OrderID</label>
       <input [(ngModel)]='bill.orderID' type="number" class="form-control" id="orderID"
-       name="orderID" required >
-
+       name="orderID" required aria-describedby="name" required #billOrderID="ngModel" pattern="[0-9]">
+      <div [hidden]="billOrderID.valid || billOrderID.pristine"></div>
     </div>
 
     <div class="form-group">
       <label for="amount">Amount</label>
       <input [(ngModel)]='bill.amount' type="number" class="form-control" id="amount"
-       name="amount" aria-describedby="amount" required >
-
+       name="amount" aria-describedby="amount" required #billAmount="ngModel" pattern="[0-9]">
+       <div [hidden]="billAmount.valid || billAmount.pristine" class="alert alert-danger">The amount required!</div>
     </div>
 
     <div class="form-group">
       <label for="status">Status</label>
-      <input [(ngModel)]='bill.status' type="text" class="form-control" id="status"
+      <select [(ngModel)]='bill.status'  type="text" class="form-control" id="status"
        name="status" aria-describedby="status" required >
+       <option *ngFor="let pow of status" [value]="bill.status">{{bill.status}}</option></select>
     </div>
 
 
 
 
-  <button (click)="onsubmit(bill)" type="submit" class="btn btn-primary float-right" mat-raised-button=""><span class="mat-button-wrapper">Submit</span>
+  <button [disabled]="!billForm.form.valid" (click)="onsubmit(bill); billForm.reset()" type="submit"
+  class="btn btn-primary float-right" mat-raised-button=""><span class="mat-button-wrapper">Submit</span>
   <div class="mat-button-ripple-mat-riple" matripple=""></div>
   <div class="mat-button-focus-overlay"></div>
 </button>
