--- a/src/app/page/edit-bill/edit-bill.component.html
+++ b/src/app/page/edit-bill/edit-bill.component.html
@@ -10,14 +10,14 @@
     <div class="form-group">
       <label for="orderID">OrderID</label>
       <input [(ngModel)]='bill.orderID' type="number" class="form-control" id="orderID"
-       name="orderID" required aria-describedby="orderID" required #billOrderID="ngModel" pattern="[0-9]">
-      <div [hidden]="billOrderID.valid || billOrderID.pristine"></div>The Order required!
+       name="orderID" required aria-describedby="orderID" required #billOrderID="ngModel" pattern='(/^-?(0|[1-9]\d*)?$/)])'>
+      <div [hidden]="billOrderID.valid || billOrderID.pristine" class="alert alert-danger">The Order required!</div>
     </div>
 
     <div class="form-group">
       <label for="amount">Amount</label>
       <input [(ngModel)]='bill.amount' type="number" class="form-control" id="amount"
-       name="amount" aria-describedby="amount" required #billAmount="ngModel" pattern="[0-9]">
+       name="amount" aria-describedby="amount" required #billAmount="ngModel" pattern="(/^-?(0|[1-9]\d*)?$/)])">
        <div [hidden]="billAmount.valid || billAmount.pristine" class="alert alert-danger">The amount required!</div>
     </div>
 
