--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -8,7 +8,8 @@
         <a class="navbar-brand" routerLink="/">Dashboard</a>
       </div>
 
-      <button (click)="toggleMenu()" class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+      <button (click)="toggleMenu()" class="navbar-toggler" type="button" data-toggle="collapse"
+      aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
         <span class="sr-only">Toggle navigation</span>
         <span class="navbar-toggler-icon icon-bar"></span>
         <span class="navbar-toggler-icon icon-bar"></span>
