--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 
-  <div class="sidebar" data-color="danger" data-background-color="white" data-image="../assets/img/sidebar-1.jpg">
+  <div class="sidebar" data-color="danger" data-background-color="white" data-image="">
       <!--
         Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
         Tip 2: you can also add an image using data-image tag
@@ -8,6 +8,9 @@
         Piszkos 12 csapat
         </a>
       </div>
+
+      <div class="sidebar-background"></div>
+
       <div class="sidebar-wrapper">
         <ul class="nav">
           <li class="nav-item active  ">
