--- a/src/app/page/bill-list/bill-list.component.html
+++ b/src/app/page/bill-list/bill-list.component.html
@@ -61,7 +61,7 @@
                           <td>{{ bill.status }}</td>
                           <td>
                               <div class="btn-group">
-                                  <button  [routerLink]="[bill.id]" class="btn btn-warning mr-3">
+                                  <button  [routerLink]="[bill.id]" class="btn btn-warning">
                                       <span class="material-icons">
                                           create
                                       </span>
