--- a/src/app/page/customer-list/customer-list.component.html
+++ b/src/app/page/customer-list/customer-list.component.html
@@ -3,13 +3,15 @@
     <button class="btn btn-danger btn-block">
       <span class="mat-button-wrapper">Add new order</span>
     </button>
-    <div class="card-header card-header-primary">
-      <h4 class="card-title mt-0">Customer List</h4>
+  </div>
+  <div class="card card-plain">
+    <div class="card-header card-header-info">
+      <h2 class="card-title mt-0">Customer List</h2>
       <p class="card-category">All customers should be seen here</p>
     </div>
 
-      <div class="col-12 my-2">
-          <table class="table table-hover">
+      <div class="col-12 my-2 table-responsive">
+          <table class="table table-hover mx-auto w-auto">
               <thead>
                   <tr>
                       <th>FirstName</th>
@@ -25,8 +27,8 @@
               </thead>
               <tbody>
                   <tr *ngFor="let customer of customerList$ | async">
-                      <td>{{ customer.firstName }}</td>
-                      <td>{{ customer.lastName }}</td>
+                      <td>{{ customer.first_name }}</td>
+                      <td>{{ customer.last_name }}</td>
                       <td>{{ customer.email }}</td>
                       <td>{{ customer.address.zip }}</td>
                       <td>{{ customer.address.country }}</td>
@@ -36,12 +38,12 @@
                       <td>{{ customer.active }}</td>
                       <td>
                           <div class="btn-group">
-                              <button class="btn btn-info px-3 mr-1">
+                              <button class="btn btn-warning">
                                   <i class="material-icons">
                                       mode_edit
                                   </i>
                               </button>
-                              <button (click)="removeCustomer(customer.id)" class="btn btn-danger px-3 ml-1">
+                              <button (click)="removeCustomer(customer.id)" class="btn btn-danger">
                                   <i class="material-icons">
                                       delete_forever
                                   </i>
