--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 
-  <div class="sidebar" data-color="danger" data-background-color="white" data-image="">
+  <div class="sidebar" data-color="danger"  data-background-color="white" data-image="">
       <!--
         Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
         Tip 2: you can also add an image using data-image tag
@@ -13,32 +13,32 @@
 
       <div class="sidebar-wrapper">
         <ul class="nav">
-          <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-            <a class="nav-link" routerLink="">
+          <li class="nav-item"  routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            <a class="nav-link red" routerLink="">
               <i class="material-icons">dashboard</i>
               <p>Dashboard</p>
             </a>
           </li>
           <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-            <a class="nav-link" routerLink="/orders">
+            <a class="nav-link purple" routerLink="/orders">
               <i class="material-icons">content_paste</i>
               <p>Orders</p>
             </a>
           </li>
           <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-            <a class="nav-link" routerLink="/product">
+            <a class="nav-link green" routerLink="/product">
               <i class="material-icons">shopping_cart</i>
               <p>Products</p>
             </a>
           </li>
           <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-            <a class="nav-link" routerLink="/bill">
+            <a class="nav-link orange" routerLink="/bill">
               <i class="material-icons">library_books</i>
               <p>Bills</p>
             </a>
           </li>
           <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-            <a class="nav-link" routerLink="/customers">
+            <a class="nav-link azure" routerLink="/customers">
               <i class="material-icons">person</i>
               <p>Customers</p>
             </a>
