--- a/src/app/common/status-card/status-card.component.html
+++ b/src/app/common/status-card/status-card.component.html
@@ -1,6 +1,6 @@
 
   <div class="card card-chart">
-    <div class="card-header card-header-success">
+    <div class="card-header card-header-success" class="{{ cardClass}}">
       <div>{{title}}</div>
     </div>
     <div class="card-body">
