--- a/src/app/common/table-card/table-card.component.html
+++ b/src/app/common/table-card/table-card.component.html
@@ -1,15 +1,43 @@
 
-<div class="card card-chart">
+ <div class="card">
   <div class="card-header card-header-warning">
-    <div class="ct-chart" id="websiteViewsChart">{{title}}</div>
+    <h4 class="card-title">Employees Stats</h4>
+    <p class="card-category">New employees on 15th September, 2016</p>
   </div>
-  <div class="card-body">
-    <h4 class="card-title">{{type}}</h4>
-    <p class="card-category">{{data}}</p>
-  </div>
-  <div class="card-footer">
-    <div class="stats">
-      <i class="material-icons">access_time</i> campaign sent 2 days ago
-    </div>
+  <div class="card-body table-responsive">
+    <table class="table table-hover">
+      <thead class="text-warning">
+        <th>ID</th>
+        <th>Name</th>
+        <th>Salary</th>
+        <th>Country</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Dakota Rice</td>
+          <td>$36,738</td>
+          <td>Niger</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Minerva Hooper</td>
+          <td>$23,789</td>
+          <td>Curaçao</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Sage Rodriguez</td>
+          <td>$56,142</td>
+          <td>Netherlands</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>Philip Chaney</td>
+          <td>$38,735</td>
+          <td>Korea, South</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
