--- a/src/app/page/bill-list/bill-list.component.html
+++ b/src/app/page/bill-list/bill-list.component.html
@@ -7,14 +7,14 @@
       </button>
   </div>
   <div class="card card-plain">
-      <div class="card-header card-header-primary">
-          <h4 class="card-title mt-0">Bill List</h4>
+      <div class="card-header card-header-warning">
+          <h2 class="card-title mt-0">Bill List</h2>
           <p class="card-category">All bills should be seen here</p>
       </div>
 
       <div class="card-body">
           <div class="table-responsive">
-              <table class="table table-hover">
+              <table class="table table-hover mx-auto w-auto">
                   <thead class="">
                     <tr class="bcolor">
                       <th [class.active]="order === 'id'"
