--- a/src/app/page/dashboard/dashboard.component.html
+++ b/src/app/page/dashboard/dashboard.component.html
@@ -59,11 +59,25 @@
 <div class="row">
 
   <div class="col-md-4">
-    <app-status-card title="Products" [data]="productChartData"></app-status-card>
+
+    <app-status-card
+      [cardClass]="'card-header-info'"
+      title="Products"
+      [data]="productChartData"
+      [colors]="productChartColors">
+    </app-status-card>
+
   </div>
 
   <div class="col-md-4">
-    <app-status-card title="Bills" [data]="billChartData"></app-status-card>
+
+    <app-status-card
+      [cardClass]="'card-header-warning'"
+      title="Bills"
+      [data]="billChartData"
+      [colors]="billChartColors">
+    </app-status-card>
+
   </div>
 
   <div class="col-md-4">
@@ -322,48 +336,7 @@
     </div>
   </div>
   <div class="col-lg-6 col-md-12">
-    <div class="card">
-      <div class="card-header card-header-warning">
-        <h4 class="card-title">Employees Stats</h4>
-        <p class="card-category">New employees on 15th September, 2016</p>
-      </div>
-      <div class="card-body table-responsive">
-        <table class="table table-hover">
-          <thead class="text-warning">
-            <th>ID</th>
-            <th>Name</th>
-            <th>Salary</th>
-            <th>Country</th>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1</td>
-              <td>Dakota Rice</td>
-              <td>$36,738</td>
-              <td>Niger</td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>Minerva Hooper</td>
-              <td>$23,789</td>
-              <td>Curaçao</td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>Sage Rodriguez</td>
-              <td>$56,142</td>
-              <td>Netherlands</td>
-            </tr>
-            <tr>
-              <td>4</td>
-              <td>Philip Chaney</td>
-              <td>$38,735</td>
-              <td>Korea, South</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
+
   </div>
 </div>
 
