--- a/src/app/page/edit-bill/edit-bill.component.html
+++ b/src/app/page/edit-bill/edit-bill.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="col-md-6">
+  <div class="col-md-8 mx-auto w-auto">
     <div class="card">
       <div class="card-header card-header-primary mb-3">
         <h4 class="card-title">Edit Bill</h4>
