--- a/src/app/page/edit-product/edit-product.component.html
+++ b/src/app/page/edit-product/edit-product.component.html
@@ -1,8 +1,8 @@
 
 <div class="container">
-  <div class="col-md-8">
+  <div class="col-md-8  mx-auto w-auto">
       <div class="card">
-          <div class="card-header card-header-info mb-3">
+          <div class="card-header card-header-success mb-3">
               <h4 class="card-title">Edit Product</h4>
               <p class="card-category">Change anything you'd like!</p>
           </div>
@@ -63,7 +63,7 @@
                 </label>
             </div>
 
-            <button [disabled]="!productForm.form.valid" (click)="onSave()" type="submit" class="btn btn-info float-right mb-4">Submit</button>
+            <button [disabled]="!productForm.form.valid" (click)="onSave()" type="submit" class="btn btn-success float-right mb-4">Submit</button>
           </div>
         </form>
 
