--- a/src/app/page/order-list/order-list.component.html
+++ b/src/app/page/order-list/order-list.component.html
@@ -8,13 +8,13 @@
     </div>
     <div class="card card-plain">
         <div class="card-header card-header-primary">
-            <h4 class="card-title mt-0">Order List</h4>
+            <h2 class="card-title mt-0">Order List</h2>
             <p class="card-category">All orders should be seen here</p>
         </div>
 
         <div class="card-body">
             <div class="table-responsive">
-                <table class="table table-hover">
+                <table class="table table-hover mx-auto w-auto">
                     <thead class="">
                             <!-- <tr>
                                 <th>ID</th>
