--- a/src/app/page/product-list/product-list.component.html
+++ b/src/app/page/product-list/product-list.component.html
@@ -5,14 +5,14 @@
       </button>
   </div>
   <div class="card card-plain">
-      <div class="card-header card-header-info">
+      <div class="card-header card-header-success">
           <h2 class="card-title mt-0">Product List</h2>
           <p class="card-category">All products should be seen here</p>
       </div>
 
       <div class="card-body">
           <div class="table-responsive">
-              <table class="table table-hover table-responsive">
+              <table class="table table-hover mx-auto w-auto">
                   <thead class="">
                       <tr class="bcolor">
                           <th [class.active]="order === 'id'"
