--- a/src/app/page/edit-order/edit-order.component.html
+++ b/src/app/page/edit-order/edit-order.component.html
@@ -45,7 +45,7 @@
                             <option value="paid">Paid</option>
                         </select>
                     </div>
-                    <button (click)="onSubmit(order)" class="btn btn-danger pull-right mat-raised-button mt-5 mb-5"
+                    <button (click)="onSubmit(order)" class="btn btn-primary pull-right mat-raised-button mt-5 mb-5"
                         mat-raised-button="" type="submit">
                         <span class="mat-button-wrapper">Submit</span>
                         <div class="mat-button-ripple mat-ripple" matripple=""></div>
