--- a/src/app/page/order-list/order-list.component.html
+++ b/src/app/page/order-list/order-list.component.html
@@ -7,7 +7,7 @@
         </button>
     </div>
     <div class="card card-plain">
-        <div class="card-header card-header-success">
+        <div class="card-header card-header-primary">
             <h2 class="card-title mt-0">Order List</h2>
             <p class="card-category">All orders should be seen here</p>
         </div>
