bill edit click

--- a/src/app/page/edit-product/edit-product.component.html
+++ b/src/app/page/edit-product/edit-product.component.html
@@ -63,7 +63,8 @@
                 </label>
             </div>
 
-            <button [disabled]="!productForm.form.valid" (click)="onSave()" type="submit" class="btn btn-success float-right mb-4">Submit</button>
+            <button [disabled]="!productForm.form.valid" (click)="onSave()" type="submit"
+            class="btn btn-success float-right mb-4">Submit</button>
           </div>
         </form>
 
