--- a/src/app/page/edit-bill/edit-bill.component.html
+++ b/src/app/page/edit-bill/edit-bill.component.html
@@ -7,35 +7,26 @@
       </div>
   <form #billForm="ngForm">
     <div class="col-md-10 offset-1">
+
     <div class="form-group">
       <label for="orderID">OrderID</label>
       <input [(ngModel)]='bill.orderID' type="number" class="form-control" id="orderID"
-       name="orderID" required aria-describedby="orderID" required #billOrderID="ngModel" pattern='(/^-?(0|[1-9]\d*)?$/)])'>
-      <div [hidden]="billOrderID.valid || billOrderID.pristine" class="alert alert-danger">The Order required!</div>
+       name="orderID" required aria-describedby="orderID" required #billOrderID="ngModel" min="1">
+      <div [hidden]="billOrderID.valid || billOrderID.pristine">The Order required!</div>
     </div>
 
     <div class="form-group">
       <label for="amount">Amount</label>
       <input [(ngModel)]='bill.amount' type="number" class="form-control" id="amount"
-       name="amount" aria-describedby="amount" required #billAmount="ngModel" pattern="(/^-?(0|[1-9]\d*)?$/)])">
-       <div [hidden]="billAmount.valid || billAmount.pristine" class="alert alert-danger">The amount required!</div>
+       name="amount" aria-describedby="amount" required #billAmount="ngModel" min="1">
+       <div [hidden]="billAmount.valid || billAmount.pristine">The amount required!</div>
     </div>
 
-    <div class="form-group">
-      <label for="status">Status</label>
-      <select [(ngModel)]='bill.status'  type="text" class="form-control" id="status"
-       name="status" aria-describedby="status" required >
-       <option *ngFor="let pow of status" [value]="bill.status">{{bill.status}}</option></select>
-    </div>
-
-
-
-
-  <button [disabled]="!billForm.form.valid" (click)="onsubmit(bill); billForm.reset()" type="submit"
-  class="btn btn-warning float-right" mat-raised-button=""><span class="mat-button-wrapper">Submit</span>
-  <div class="mat-button-ripple-mat-riple" matripple=""></div>
-  <div class="mat-button-focus-overlay"></div>
-</button>
+  <button [disabled]="!billForm.form.valid" (click)="onSave()" type="submit"
+    class="btn btn-warning float-right" mat-raised-button=""><span class="mat-button-wrapper">Submit</span>
+    <div class="mat-button-ripple-mat-riple" matripple=""></div>
+    <div class="mat-button-focus-overlay"></div>
+  </button>
     </div>
 </form>
 
