--- a/src/app/page/dashboard/dashboard.component.html
+++ b/src/app/page/dashboard/dashboard.component.html
@@ -66,6 +66,6 @@
     <app-table-card [data]="newProductsList">
 
     </app-table-card>
-    <a routerLink="/product" class="stretched-link">Go somewhere</a>
+    <a routerLink="/product" class="stretched-link"></a>
   </div>
 </div>
