--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
       <router-outlet></router-outlet>
       </div>
     </div>
-    <app-footer></app-footer>
+    <app-footer class="mt-auto"></app-footer>
   </div>
 
 
