--- a/src/app/common/table-card/table-card.component.html
+++ b/src/app/common/table-card/table-card.component.html
@@ -1,5 +1,5 @@
 
- <div class="card">
+ <div class="card col">
   <div class="card-header card-header-success">
     <h4 class="card-title">Last 5 new products</h4>
     <p class="card-category"></p>
