--- a/src/app/page/product-list/product-list.component.html
+++ b/src/app/page/product-list/product-list.component.html
@@ -15,7 +15,19 @@
               <table class="table table-hover mx-auto w-auto">
                   <thead class="">
                       <tr class="bcolor">
-                          <th [class.active]="order === 'id'"
+                        <th *ngFor="let col of cols"
+                        [class.active]="order === col.key"
+                        (click)="setOrder(col.key)"
+                        id="{{ col.key }}"
+                        draggable="true"
+                        (dragover)="$event.preventDefault()"
+                        (dragstart)="onHeaderDragStart($event)"
+                        (drop)="onHeaderDrop($event)">
+                        {{ col.title }}
+                        <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span>
+                        <input (keyup)="onFilter(col.key, $event)" class="form-control"  type="text" placeholder="Filter">
+                      </th>
+                        <!--  <th [class.active]="order === 'id'"
                             (click)="setOrder('id')">ID:
                             <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span>
                           </th>
@@ -48,10 +60,10 @@
                           <th [class.active]="order === 'active'"
                           (click)="setOrder('active')">Active:
                           <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span>
-                          </th>
+                          </th> -->
 
                       </tr>
-
+                      <!--
                       <tr>
                         <th><input (keyup)="onFilter('id', $event)" class="form-control"  type="text" placeholder="Filter"></th>
                         <th><input (keyup)="onFilter('name', $event)" class="form-control" type="text" placeholder="Filter"></th>
@@ -61,18 +73,22 @@
                         <th><input (keyup)="onFilter('featured', $event)" class="form-control" type="text" placeholder="Filter"></th>
                         <th><input (keyup)="onFilter('active', $event)" class="form-control" type="text" placeholder="Filter"></th>
                       </tr>
-
+                    -->
                   </thead>
                   <tbody>
-                      <tr *ngFor="let product of productList$ | async | orderBy:order:reverse">
-                          <td>{{ product.id }}</td>
+                    <tr *ngFor="let product of productList$ | async | orderBy:order:reverse | paginate: { itemsPerPage: 10,
+                        currentPage: page,
+                        totalItems:totalLength
+                      }">
+                      <td *ngFor="let col of cols">{{ product[col.key] }}</td>
+                         <!-- <td>{{ product.id }}</td>
                           <td>{{ product.name }}</td>
                           <td>{{ product.type }}</td>
 
                           <td>{{ product.description }}</td>
                           <td>{{ product.price }}</td>
                           <td>{{product.featured}}</td>
-                          <td>{{product.active}}</td>
+                          <td>{{product.active}}</td>-->
                           <td>
                               <div class="btn-group">
                                   <button [routerLink]="[product.id]" class="btn btn-warning">
@@ -90,6 +106,7 @@
                       </tr>
                   </tbody>
               </table>
+              <pagination-controls class="text-center" (pageChange)="page = $event"></pagination-controls>
           </div>
       </div>
   </div>
