--- a/src/app/common/table-card/table-card.component.html
+++ b/src/app/common/table-card/table-card.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="card-body table-responsive">
     <table class="table table-hover">
-      <thead class="text-warning">
+      <thead class="text-success">
         <th>Name</th>
         <th>Type</th>
         <th>Price</th>
