--- a/src/app/page/edit-customer/edit-customer.component.html
+++ b/src/app/page/edit-customer/edit-customer.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="col-md-8  mx-auto w-auto">
       <div class="card">
-          <div class="card-header card-header-success mb-3">
+          <div class="card-header card-header-info mb-3">
               <h4 class="card-title">Edit Customer</h4>
               <p class="card-category">Change anything you'd like!</p>
           </div>
@@ -83,7 +83,7 @@
               </div>
 
             <button [disabled]="!customerForm.form.valid" (click)="onSave()" type="submit"
-            class="btn btn-success float-right mb-4">Submit</button>
+            class="btn btn-info float-right mb-4">Submit</button>
           </div>
         </form>
 
